# MONI_K

./: .gitignore  CMakeLists.txt  LocationSummary.cpp  LocationSummary.h  MONI_K.cpp  MONI_K.h  README.md  Tables.cpp  Tables.h  bin_table_test.cpp  compile.sh  construct_tables.cpp  construct_tables.h  generate_random_strings.py  lcp_test.cpp  lcp_test.h  main.cpp
testing/: test.txt  test_InversePhiTable_Bin  test_MONITable_Bin  test_PhiTable_Bin  test_Summary_Bin  test_strings.txt
